--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/CustomTheme">
+        <activity android:name=".EditDetailsActivity"></activity>
         <activity android:name=".GetDetailsActivity" />
         <activity android:name=".IntroActivity" />
         <activity android:name=".MainActivity">
