--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.SEND_SMS"/>
+    <uses-permission android:name="android.permission.SEND_SMS" />
 
     <application
         android:allowBackup="true"
@@ -14,7 +14,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/CustomTheme">
-        <activity android:name=".EditDetailsActivity"></activity>
+        <service
+            android:name=".GPSTracker"
+            android:enabled="true"
+            android:exported="true"></service>
+
+        <activity android:name=".EditDetailsActivity" />
         <activity android:name=".GetDetailsActivity" />
         <activity android:name=".IntroActivity" />
         <activity android:name=".MainActivity">
